--- a/DCrypt/res/layout/activity_picviewer.xml
+++ b/DCrypt/res/layout/activity_picviewer.xml
@@ -8,7 +8,8 @@
 	    android:id="@+id/dcryptImageView"
 	    android:layout_width="fill_parent" 
 	    android:layout_height="fill_parent"
-	    android:layout_below="@+id/prevButton" />
+	    android:layout_below="@+id/prevButton"
+	    android:contentDescription="@string/dcryptImageView_Desc" />
 
 	<Button
 	    android:id="@+id/nextButton"
