--- a/DCrypt/res/layout/password_dialog.xml
+++ b/DCrypt/res/layout/password_dialog.xml
@@ -7,16 +7,34 @@
     android:layout_weight="1" 
     android:orientation="vertical">   
         
-	<TextView 
-	    android:id="@+id/passwordTextView"
+	<TextView
+	    android:id="@+id/passwordTextView1"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
-	    android:text="@string/password_message"
+	    android:text="@string/password_message1"
 	    android:textAppearance="?android:attr/textAppearanceMedium" />
-	<EditText 
-	    android:id="@+id/passwordEditText"
+
+	<EditText
+	    android:id="@+id/passwordEditText1"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:ems="10"
+	    android:inputType="textPassword" >
+	    <requestFocus />
+	</EditText>
+
+	<TextView
+	    android:id="@+id/passwordTextView2"
 	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"	    
-	    android:textAppearance="?android:attr/textAppearanceMedium"
+	    android:layout_height="wrap_content"
+	    android:text="@string/password_message2"
+	    android:textAppearance="?android:attr/textAppearanceMedium" />
+	
+	<EditText
+	    android:id="@+id/passwordEditText2"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:ems="10"
 	    android:inputType="textPassword" />
+
 </LinearLayout>
